Bug 1364 - ACPI without PCI
Summary: ACPI without PCI
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Config-Other (show other bugs)
Hardware: i386 Linux
: P2 low
Assignee: Len Brown
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2003-10-15 13:20 UTC by Len Brown
Modified: 2005-09-09 09:11 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.4.22, 2.4.23-pre7, 2.6.0-test7
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
patch vs 2.6.13-rc6+ACPI-patches (12.40 KB, patch)
2005-08-25 10:26 UTC, Len Brown
Details | Diff

Description Len Brown 2003-10-15 13:20:58 UTC
ACPI doesn't build if CONFIG_PCI is not enabled: 
 
arch/i386/kernel/kernel.o(.text.init+0x3cd0): In function `disable_acpi_pci': 
: undefined reference to `use_acpi_pci' 
drivers/acpi/acpi.o(.text.init+0x94e): In function `acpi_bus_init': 
: undefined reference to `eisa_set_level_irq' 
 
When the build is fixed and ACPI is booted with a !CONFIG_PCI kernel, it complains: 
Linux version 2.6.0-test7 (lenb@dhcppc27) (gcc version 3.3.1 20030930 (Red Hat L 
inux 3.3.1-6)) #1 Wed Oct 15 14:28:59 EDT 2003 
... 
ACPI: Subsystem revision 20031002 
    ACPI-0345: *** Error: Handler for [PCI_Config] returned AE_SUPPORT 
    ACPI-1120: *** Error: Method execution failed [\_SB_.PCI0.LNK1._STA] (Node c 
df6b720), AE_SUPPORT 
    ACPI-0098: *** Error: Method execution failed [\_SB_.PCI0.LNK1._STA] (Node c 
df6b720), AE_SUPPORT 
 
But it _does_ work -- the power button event is caught and handled.
Comment 1 Len Brown 2003-11-13 10:49:13 UTC
i386 !PCI build is now fixed 
x86_64 !PCI build is still broken 
boot-time messages still present on !PCI config. 
 
 
Comment 2 Luming Yu 2005-04-27 00:50:32 UTC
Just tried building to-akpm tree without PCI, it is ok if #undef 
CONFIG_PNPACPI. 
Comment 3 Len Brown 2005-08-25 10:26:32 UTC
Created attachment 5762 [details]
patch vs 2.6.13-rc6+ACPI-patches

delete CONFIG_ACPI_PCI altogether,
ACPI now selects PCI if it isn't enabled already.

applied to-akpm.
Comment 4 Len Brown 2005-09-09 09:11:36 UTC
shipped in 2.6.13-git9
closed.

Note You need to log in before you can comment on or make changes to this bug.